{
    "name": "GameInputs",
    "maps": [
        {
            "name": "Action",
            "id": "72b14850-20f0-41db-9670-bcd1e00931c5",
            "actions": [
                {
                    "name": "Circle",
                    "type": "Button",
                    "id": "a45dc56b-3e51-4b24-b207-66ad68121af0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Cross",
                    "type": "Button",
                    "id": "acedbd70-1088-4d25-a719-e8dac666eea8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Square",
                    "type": "Button",
                    "id": "3704c8f0-e16c-479e-b802-8fbdf231bcad",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Triangle",
                    "type": "Button",
                    "id": "b917b268-cde2-4069-8575-71fe31a97a9d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Up",
                    "type": "Button",
                    "id": "12ed4842-3afe-423d-8fc7-9fb4525bcd71",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Down",
                    "type": "Button",
                    "id": "e6d7c304-6885-4b7e-aa64-29f071bb7233",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Right",
                    "type": "Button",
                    "id": "9236eefd-74e2-4168-874b-c57ecf10a107",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Left",
                    "type": "Button",
                    "id": "0f74421b-b7df-417c-bd5f-ec16e78ce5db",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "R1",
                    "type": "Button",
                    "id": "f1f2362e-81c2-4c04-ac52-33f794404d10",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "R2",
                    "type": "Button",
                    "id": "78e0fa1e-d7e9-4f4f-b389-5f762054b013",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "R3",
                    "type": "Button",
                    "id": "c459f099-7c60-4c68-9cb6-91abda509f14",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "L1",
                    "type": "Button",
                    "id": "f80af9c7-7a73-4b7b-999d-a63b5c361202",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "L2",
                    "type": "Button",
                    "id": "9b893b6e-ece2-4d2b-8a7d-0cf553db08ce",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "L3",
                    "type": "Button",
                    "id": "b62658da-813c-4ae8-a2b5-5f2995aff7a8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Options",
                    "type": "Button",
                    "id": "7f89b8e4-4966-4cf0-a6cd-7678c59aac6a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Share",
                    "type": "Button",
                    "id": "dbbebc48-6b6b-4af5-87cd-50d491ec9a6d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightStick",
                    "type": "Value",
                    "id": "e15e959e-a367-482a-9a63-dd3dc922a290",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftStick",
                    "type": "Value",
                    "id": "7dfb93e6-4d38-4e0f-ba1c-bb3287ce178d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e07ced1a-6aaf-4390-9cd3-0b6185aa213d",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Circle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b56b3be3-d9c8-40a4-b178-b1f1afb0d03d",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cross",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cd6566ab-017d-4915-94db-252aaf18b743",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Square",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e217583-b87b-4a25-8228-db7a6543bff0",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Triangle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f04cd7e1-21e9-4123-9a98-ec7b642d4b82",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7e392fd2-8b0b-40cd-9864-29dbb7e6c93d",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b85b1629-e2e8-4a1d-b3da-128516d7a876",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2b439330-b2dc-4a14-b66d-e94ff6a57fda",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9c54a05c-e0f8-4a21-837e-b3254b70e827",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "R1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8bca970f-7e15-4fb7-b8dc-beacc940eb8c",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "R2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1886fa15-e923-49e8-8324-b3f54d5ed610",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "R3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1bbad068-7c27-42ab-bf13-e10e54d9f2da",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "L1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0b6ec1d1-0b4b-4fbf-b6a0-c1177bb66969",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "L2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4bfdd871-064e-4c02-ad2c-f4bcd111cfca",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "L3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0be1aa7e-0c25-4518-ac8c-c5a6fe347103",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Options",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7dd9750c-be16-4d59-8e1f-885956bce1e3",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Share",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dbb99534-b95e-4a74-ad21-e53734d57e16",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f2af4c9-af66-4c2d-86ab-5e58b0df5193",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}